--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 }
 
 textarea {
-    width: calc(50% - 8px);
+    margin-bottom: 16px;
+    width: 100%;
     height: 200px;
     padding: 4px 8px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -20,10 +21,9 @@ textarea {
     resize: none;
 }
 
-button {
-    -webkit-align-self: flex-start;
-    -ms-flex-item-align: start;
-    align-self: flex-start;
+.button {
+    display: inline-block;
+    position: relative;
     margin: 0 0 8px;
     min-width: 120px;
     padding: 0 16px;
@@ -31,17 +31,23 @@ button {
     font-size: 14px;
     font-weight: 500;
     line-height: 32px;
+    text-align: center;
     color: #ffffff;
     background-color: #0075ff;
     border: none;
     border-radius: 4px;
     outline: none;
+    box-sizing: border-box;
     cursor: pointer;
     user-select: none;
 }
 
-button:hover {
+.button:hover {
     background-color: #005cc8;
+}
+
+input[type=file] {
+    display: none;
 }
 
 input[type=checkbox] {
@@ -49,16 +55,6 @@ input[type=checkbox] {
     width: 16px;
     height: 16px;
     outline: none;
-}
-
-label {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 8px;
-    width: 240px;
-    line-height: 24px;
-    user-select: none;
 }
 
 h1 {
@@ -79,6 +75,7 @@ h4 {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    position: relative;
     margin: 0 auto;
     width: 720px;
     padding: 8px 16px;
@@ -87,20 +84,45 @@ h4 {
     flex-direction: column;
 }
 
-#row {
+.grid {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    margin-bottom: 16px;
+    position: relative;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
-#options, #categories {
+.cel {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    position: relative;
+    width: calc(50% - 8px);
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.row {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+}
+
+.spacer {
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+}
+
+.input-group {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
     max-height: 480px;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
@@ -114,4 +136,14 @@ h4 {
     -webkit-align-content: flex-start;
     -ms-flex-line-pack: start;
     align-content: flex-start;
+}
+
+.input-group label {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 8px;
+    width: 240px;
+    line-height: 24px;
+    user-select: none;
 }
