--- a/style.css
+++ b/style.css
@@ -1,60 +1,9 @@
 body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
     font-size: 14px;
     line-height: 20px;
     color: #212121;
-}
-
-textarea {
-    margin-bottom: 16px;
-    width: 100%;
-    height: 200px;
-    padding: 4px 8px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    color: #212121;
-    border: 1px #767676 solid;
-    border-radius: 4px;
-    outline: none;
-    resize: none;
-}
-
-.button {
-    display: inline-block;
-    position: relative;
-    margin: 0 0 8px;
-    min-width: 120px;
-    padding: 0 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 32px;
-    text-align: center;
-    color: #ffffff;
-    background-color: #0075ff;
-    border: none;
-    border-radius: 4px;
-    outline: none;
-    box-sizing: border-box;
-    cursor: pointer;
-    user-select: none;
-}
-
-.button:hover {
-    background-color: #005cc8;
-}
-
-input[type=file] {
-    display: none;
-}
-
-input[type=checkbox] {
-    margin: 4px 8px 4px 0;
-    width: 16px;
-    height: 16px;
-    outline: none;
 }
 
 h1 {
@@ -67,42 +16,117 @@ h1 {
 h4 {
     font-size: 16px;
     font-weight: 500;
-    line-height: 1;
+    line-height: 48px;
+    margin: 0 0 8px;
+}
+
+input[type=file] {
+    display: none;
+}
+
+input[type=file] + label {
+    display: inline-block;
+    position: relative;
+    margin: 8px;
+    min-width: 80px;
+    padding: 7px;
+    border: 1px solid #dadce0;
+    border-radius: 4px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: center;
+    color: #1a73e8;
+    cursor: pointer;
+}
+
+input[type=file] + label:hover {
+    background-color: #f8faff;
+    border-color: #d2e3fc;
+}
+
+input[type=checkbox] {
+    margin: 0 16px 0 0;
+    width: 16px;
+    height: 16px;
+    outline: none;
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    height: 150px;
+    padding: 8px;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    color: #212121;
+    border: 1px #767676 solid;
+    border-radius: 4px;
+    outline: none;
+    resize: none;
+}
+
+button {
     margin: 16px 0;
+    min-width: 120px;
+    padding: 0 16px;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: center;
+    color: #ffffff;
+    background-color: #0075ff;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+    user-select: none;
 }
 
-#wrapper {
+button:hover {
+    background-color: #005cc8;
+}
+
+#layout {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     position: relative;
-    margin: 0 auto;
-    width: 720px;
-    padding: 8px 16px;
+    width: 100%;
+    height: 100%;
+    padding-right: 300px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+}
+
+#sidebar {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    width: 300px;
+    padding: 8px 24px;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
-.grid {
+#main {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     position: relative;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-
-.cel {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    position: relative;
-    width: calc(50% - 8px);
+    padding: 24px 48px;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
 }
 
 .row {
@@ -110,40 +134,28 @@ h4 {
     display: -ms-flexbox;
     display: flex;
     position: relative;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
-.spacer {
-    -webkit-flex-grow: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
-}
-
-.input-group {
+.controls {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     position: relative;
-    max-height: 480px;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    -webkit-align-content: flex-start;
-    -ms-flex-line-pack: start;
-    align-content: flex-start;
 }
 
-.input-group label {
+.controls label {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    padding: 4px 0;
     margin-bottom: 8px;
-    width: 240px;
-    line-height: 24px;
+    white-space: nowrap;
+    line-height: 1;
     user-select: none;
 }
