--- a/style.css
+++ b/style.css
@@ -6,13 +6,6 @@ body {
     color: #212121;
 }
 
-h1 {
-    font-size: 24px;
-    font-weight: 500px;
-    line-height: 32px;
-    margin: 24px 0;
-}
-
 h4 {
     font-size: 16px;
     font-weight: 500;
@@ -27,7 +20,7 @@ input[type=file] {
 input[type=file] + label {
     display: inline-block;
     position: relative;
-    margin: 8px;
+    margin: 16px 8px;
     min-width: 80px;
     padding: 7px;
     border: 1px solid #dadce0;
@@ -54,16 +47,21 @@ input[type=checkbox] {
 textarea {
     display: block;
     width: 100%;
-    height: 150px;
-    padding: 8px;
+    min-height: 180px;
+    padding: 16px;
     font-family: 'Segoe UI', Tahoma, sans-serif;
     font-size: 14px;
     line-height: 20px;
     color: #212121;
-    border: 1px #767676 solid;
-    border-radius: 4px;
+    background-color: #ffffff;
+    border: none;
     outline: none;
+    overflow: hidden;
     resize: none;
+}
+
+textarea[readonly] {
+    background-color: #f5f5f5;
 }
 
 button {
@@ -88,6 +86,37 @@ button:hover {
     background-color: #005cc8;
 }
 
+.button-icon {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    width: 48px;
+    height: 48px;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.button-icon:hover {
+    background-color: rgba(0, 0, 0, 0.04);
+}
+
+.button-icon svg {
+    fill: rgba(0, 0, 0, 0.54);
+}
+
+#copy {
+    position: absolute;
+    right: 8px;
+    bottom: 8px;
+}
+
 #layout {
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -95,9 +124,29 @@ button:hover {
     position: relative;
     width: 100%;
     height: 100%;
-    padding-right: 300px;
+    background-color: #f5f5f5;
+}
+
+#header {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 64px;
+    padding: 0 24px;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #5f6368;
     background-color: #ffffff;
-    box-sizing: border-box;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    z-index: 1;
 }
 
 #sidebar {
@@ -110,9 +159,12 @@ button:hover {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    background-color: #ffffff;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.28);
     box-sizing: border-box;
     overflow-x: hidden;
     overflow-y: auto;
+    z-index: 2;
 }
 
 #main {
@@ -120,13 +172,28 @@ button:hover {
     display: -ms-flexbox;
     display: flex;
     position: relative;
-    padding: 24px 48px;
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 64px 24px 0;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
+    box-sizing: border-box;
+}
+
+#panel {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    background-color: #ffffff;
+    border: 1px rgba(0, 0, 0, 0.12) solid;
+    border-radius: 8px;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+    overflow: hidden;
 }
 
 .row {
@@ -137,6 +204,10 @@ button:hover {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+}
+
+.separator {
+    border-left: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .controls {
@@ -153,7 +224,7 @@ button:hover {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    padding: 4px 0;
+    padding: 8px 0;
     margin-bottom: 8px;
     white-space: nowrap;
     line-height: 1;
